# pretix-meta-pixel

./: .update-locales.sh  MANIFEST.in  Makefile  README.rst  pretixplugin.toml  pyproject.toml  setup.cfg
.github/workflows/: style.yml  tests.yml
pretix_meta_pixel/: apps.py  signals.py  urls.py  views.py
pretix_meta_pixel/templates/pretix_meta_pixel/: settings.html
