[project]
name = "pretix-meta-pixel"
dynamic = ["version"]
description = "A crude Pretix plugin for integrating Meta Pixel tracking"
readme = "README.rst"
license = {text = "Apache"}
keywords = ["pretix"]
authors = [
    {name = "Daniel Malik", email = "mail@fronbasal.de"},
]
maintainers = [
    {name = "Daniel Malik", email = "mail@fronbasal.de"},
]

dependencies = [
]

[project.entry-points."pretix.plugin"]
pretix_meta_pixel = "pretix_meta_pixel:PretixPluginMeta"

[project.entry-points."distutils.commands"]
build = "pretix_plugin_build.build:CustomBuild"

[build-system]
requires = [
    "setuptools",
    "pretix-plugin-build",
]

[project.urls]
homepage = "https://github.com/fronbasal/pretix-meta-pixel"
repository = "https://github.com/fronbasal/pretix-meta-pixel"

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "pretix_meta_pixel.__version__"}

[tool.setuptools.packages.find]
include = ["pretix*"]
namespaces = false
